graduation 토큰 식별로 수정